--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Our Services
                         </a>
                         <ul class="dropdown-menu">
@@ -69,7 +69,7 @@
         <div class="container">
             <h3 class="text-center">Providing Unlimited Services</h3>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-md-0 mb-5">
                     <div class="service-card px-4 py-3">
                     <div class="service-icon mb-3">
                         <i class="fa-solid fa-users-gear"></i>
@@ -79,7 +79,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-md-0 mb-5">
                     <div class="service-card px-4 py-3">
                     <div class="service-icon mb-3">
                         <i class="fa-solid fa-shield-halved"></i>
@@ -89,7 +89,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-md-0 mb-5">
                     <div class="service-card px-4 py-3">
                     <div class="service-icon mb-3">
                         <i class="fa-solid fa-code"></i>
@@ -198,13 +198,13 @@
     <footer class=" footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-md-0 mb-5">
                     <h3>Who We are</h3>
                     <p>About Us</p>
                     <p>Call Us</p>
                     <p>Blogs</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-md-0 mb-5">
                     <h3>What We Do</h3>
                     <p>CRM System</p>
                     <p>Digital Marketing</p>
