--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0 text-white">
-                    <li class="nav-item">
+                <ul class="navbar-nav mb-2 mb-lg-0 text-white mx-auto">
+                    <li class="nav-item ms-5">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item dropdown">
