--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
                             Our Services
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#"><i class="fa-regular fa-building me-2"></i> Establishing Companies</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-user-group me-2"></i> Customer Relationship Management</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-magnifying-glass-chart me-2"></i> Marketing Consulting</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-shield-halved me-2"></i> Digital Insurance</a></li>
+                            <li><a class="dropdown-item" href="/start-up-companies.html"><i class="fa-regular fa-building me-2"></i> Establishing Companies</a></li>
+                            <li><a class="dropdown-item" href="/Customer-relation-management.html"><i class="fa-solid fa-user-group me-2"></i> Customer Relationship Management</a></li>
+                            <li><a class="dropdown-item" href="/marketing-consulting.html"><i class="fa-solid fa-magnifying-glass-chart me-2"></i> Marketing Consulting</a></li>
+                            <li><a class="dropdown-item" href="/digital-insurance.html"><i class="fa-solid fa-shield-halved me-2"></i> Digital Insurance</a></li>
                             <li><a class="dropdown-item" href="/human-capitai-manahment.html"><i class="fa-solid fa-users-gear me-2"></i> Human Capital Management</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-scale-balanced me-2"></i> Legal Service</a></li>
+                            <li><a class="dropdown-item" href="/legal-services.html"><i class="fa-solid fa-scale-balanced me-2"></i> Legal Service</a></li>
+                            <li><a class="dropdown-item" href="/software.html"><i class="fa-solid fa-laptop-code me-2"></i> Software Development & IT Consulting</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -69,7 +70,7 @@
     <section class="services-section" >
         <div class="container">
             <h3 class="text-center">Providing Unlimited Services</h3>
-            <div class="row">
+            <div class="row ">
                 <div class="col-md-4 mb-md-0 mb-5 " data-aos="fade-up"  data-aos-delay="0" >
                     <div class="service-card px-4 py-3">
                     <div class="service-icon mb-3">
@@ -105,7 +106,7 @@
 
     </section>
 
-    <section class="about-us-section" >
+    <section class="about-us-section overflow-hidden" >
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right" data-aos-delay="0" >
@@ -116,13 +117,13 @@
                 </div>
                 </div>
                 <div class="col-md-5  d-flex justify-content-center align-items-center" data-aos="fade-left" >
-                    <img src="./assets/about-us.png" class="w-100" alt="about-us">
+                    <img src="./assets/3131733_36968.svg" class="w-100" alt="about-us">
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="our-service" id="our-service-section">
+    <section class="our-service overflow-hidden" id="our-service-section">
         <div class="container">
             <h3 class="text-center">our service</h3>
             <div class="row">
@@ -213,7 +214,7 @@
 
     </section>
 
-    <section class="our-team">
+    <section class="our-team overflow-hidden">
         <div class="container">
             <div class="row">
                 <div class="col-md-6" data-aos="fade-down-right">
@@ -233,7 +234,7 @@
         </div>
     </section>
 
-    <section class="contact-us-section">
+     <section class="contact-us-section overflow-hidden">
         <div class="container">
             <div class="row">
                 <div class="col-md-6" data-aos="fade-down-right">
@@ -287,7 +288,7 @@
             </div>
         </div>
 
-    </section>
+    </section> 
 
 
     <footer class=" footer">
