--- a/software.html
+++ b/software.html
@@ -30,12 +30,13 @@
                             Our Services
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#"><i class="fa-regular fa-building me-2"></i> Establishing Companies</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-user-group me-2"></i> Customer Relationship Management</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-magnifying-glass-chart me-2"></i> Marketing Consulting</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-shield-halved me-2"></i> Digital Insurance</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-users-gear me-2"></i> Human Capital Management</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="fa-solid fa-scale-balanced me-2"></i> Legal Service</a></li>
+                            <li><a class="dropdown-item" href="/start-up-companies.html"><i class="fa-regular fa-building me-2"></i> Establishing Companies</a></li>
+                            <li><a class="dropdown-item" href="/Customer-relation-management.html"><i class="fa-solid fa-user-group me-2"></i> Customer Relationship Management</a></li>
+                            <li><a class="dropdown-item" href="/marketing-consulting.html"><i class="fa-solid fa-magnifying-glass-chart me-2"></i> Marketing Consulting</a></li>
+                            <li><a class="dropdown-item" href="/digital-insurance.html"><i class="fa-solid fa-shield-halved me-2"></i> Digital Insurance</a></li>
+                            <li><a class="dropdown-item" href="/human-capitai-manahment.html"><i class="fa-solid fa-users-gear me-2"></i> Human Capital Management</a></li>
+                            <li><a class="dropdown-item" href="/legal-services.html"><i class="fa-solid fa-scale-balanced me-2"></i> Legal Service</a></li>
+                            <li><a class="dropdown-item" href="/software.html"><i class="fa-solid fa-laptop-code me-2"></i> Software Development & IT Consulting</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
