--- a/human-capitai-manahment.html
+++ b/human-capitai-manahment.html
@@ -48,7 +48,7 @@
                   
                 </ul>
                     <button class="contact-us-button ">
-                        <a href="">Contact Us</a>
+                        <a href="index.html#contact-us">Contact Us</a>
                     </button>
             </div>
         </div>
