--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   
                 </ul>
                     <button class="contact-us-button ">
-                        <a href="">Contact Us</a>
+                        <a href="#contact-us">Contact Us</a>
                     </button>
             </div>
         </div>
@@ -205,7 +205,7 @@
                
                 </div>
                 <div class="col-md-4 d-flex justify-content-end align-items-center">
-                    <button class="contact-us-button bg-contact">Contact-us</button>
+                    <a href="#contact-us" class="contact-us-button bg-contact text-decoration-none">Contact-us</a>
                 </div>
             </div>
             <img src="./assets/problem-result.png" class="w-100 mt-5" alt="problem-result" data-aos="fade-up-right">
@@ -234,7 +234,7 @@
         </div>
     </section>
 
-     <section class="contact-us-section overflow-hidden">
+     <section id="contact-us" class="contact-us-section overflow-hidden">
         <div class="container">
             <div class="row">
                 <div class="col-md-6" data-aos="fade-down-right">
