--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="#about-us">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="#services">Blog</a>
                     </li>
                   
                 </ul>
@@ -67,7 +67,7 @@
     </section>
 
 
-    <section class="services-section" >
+    <section id="services" class="services-section" >
         <div class="container">
             <h3 class="text-center">Providing Unlimited Services</h3>
             <div class="row ">
@@ -106,7 +106,7 @@
 
     </section>
 
-    <section class="about-us-section overflow-hidden" >
+    <section id="about-us" class="about-us-section overflow-hidden" >
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right" data-aos-delay="0" >
