--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                     <div class="">
                     <h4 class="mt-0 mt-md-5">About Us</h4>
                     <p class="pt-4 pb-3">By choosing the Octopus you can gain strength in stress tolerance by working with us. Providing you with all the services in one organization without the need for any other company makes your company a leader; your development is faster, you can compete with any other company working in your field, and it increases your adaptability to the changes in the labor market.</p>
-                    <button class="contact-us-button ">Read More</button>
+                   <a href="#our-team" class="text-decoration-none"><button class="contact-us-button ">Read More</button></a> 
                 </div>
                 </div>
                 <div class="col-md-5  d-flex justify-content-center align-items-center" data-aos="fade-left" >
-                    <img src="./assets/3131733_36968.svg" class="w-100" alt="about-us">
+                    <img src="./assets/business-team-joining-hands-together-city-background.jpg" class="w-100" alt="about-us">
                 </div>
             </div>
         </div>
@@ -214,7 +214,7 @@
 
     </section>
 
-    <section class="our-team overflow-hidden">
+    <section class="our-team overflow-hidden" id="our-team">
         <div class="container">
             <div class="row">
                 <div class="col-md-6" data-aos="fade-down-right">
