--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="row justify-content-between">
                 <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right" data-aos-delay="0" >
                     <div class="">
-                    <h4 class="mt-0 mt-md-5">About Us</h4>
+                    <h4 class="">About Us</h4>
                     <p class="pt-4 pb-3">By choosing the Octopus you can gain strength in stress tolerance by working with us. Providing you with all the services in one organization without the need for any other company makes your company a leader; your development is faster, you can compete with any other company working in your field, and it increases your adaptability to the changes in the labor market.</p>
                    <a href="#our-team" class="text-decoration-none"><button class="contact-us-button ">Read More</button></a> 
                 </div>
@@ -180,7 +180,7 @@
                 </div>
                 </a>
             </div>
-            <div class="col-md-6 mb-5" data-aos="fade-down-right" data-aos-delay="800" data-aos-anchor="#our-service-section">
+            <div class="col-md-6 mb-5" data-aos="fade-down-left" data-aos-delay="800" data-aos-anchor="#our-service-section">
                 <a href="/software.html" class="text-decoration-none">
                         <div class="service-card mx-auto text-center">
                     <div class="service-icon">
@@ -296,21 +296,21 @@
             <div class="row">
                 <div class="col-md-4 mb-md-0 mb-5">
                     <h3>Who We are</h3>
-                    <p>About Us</p>
-                    <p>Call Us</p>
-                    <p>Blogs</p>
+                    <p><a href="#about-us" class="text-decoration-none" style="color: #999;">About Us</a></p>
+                    <p><a href="#contact-us" class="text-decoration-none" style="color: #999;">Call Us</a></p>
+                    <p><a href="#services" class="text-decoration-none" style="color: #999;">Blogs</a></p>
                 </div>
                 <div class="col-md-4 mb-md-0 mb-5">
                     <h3>What We Do</h3>
-                    <p>CRM System</p>
-                    <p>Digital Marketing</p>
-                    <p>Establishing start up companies</p>
+                    <p><a href="Customer-relation-management.html" class="text-decoration-none" style="color: #999;">CRM System</a></p>
+                    <p><a href="marketing-consulting.html" class="text-decoration-none" style="color: #999;">Digital Marketing</a></p>
+                    <p><a href="start-up-companies.html" class="text-decoration-none" style="color: #999;">Establishing start up companies</a></p>
                 </div>
                 <div class="col-md-4">
                     <h3>Also We Do</h3>
-                    <p>Tameen Now For Octopus</p>
-                    <p>Human Capital Management</p>
-                    <p>Legal Service</p>
+                    <p><a href="software.html" class="text-decoration-none" style="color: #999;">Software Development & IT Consulting</a></p>
+                    <p><a href="human-capitai-manahment.html" class="text-decoration-none" style="color: #999;">Human Capital Management</a></p>
+                    <p><a href="legal-services.html" class="text-decoration-none" style="color: #999;">Legal Service</a></p>
                 </div>
                 
             </div>
