--- a/start-up-companies.html
+++ b/start-up-companies.html
@@ -85,21 +85,21 @@
             <div class="row">
                 <div class="col-md-4 mb-md-0 mb-5">
                     <h3>Who We are</h3>
-                    <p>About Us</p>
-                    <p>Call Us</p>
-                    <p>Blogs</p>
+                    <p><a href="index.html#about-us" class="text-decoration-none" style="color: #999;">About Us</a></p>
+                    <p><a href="index.html#contact-us" class="text-decoration-none" style="color: #999;">Call Us</a></p>
+                    <p><a href="index.html#services" class="text-decoration-none" style="color: #999;">Blogs</a></p>
                 </div>
                 <div class="col-md-4 mb-md-0 mb-5">
                     <h3>What We Do</h3>
-                    <p>CRM System</p>
-                    <p>Digital Marketing</p>
-                    <p>Establishing start up companies</p>
+                    <p><a href="Customer-relation-management.html" class="text-decoration-none" style="color: #999;">CRM System</a></p>
+                    <p><a href="marketing-consulting.html" class="text-decoration-none" style="color: #999;">Digital Marketing</a></p>
+                    <p><a href="start-up-companies.html" class="text-decoration-none" style="color: #999;">Establishing start up companies</a></p>
                 </div>
                 <div class="col-md-4">
                     <h3>Also We Do</h3>
-                    <p>Tameen Now For Octopus</p>
-                    <p>Human Capital Management</p>
-                    <p>Legal Service</p>
+                    <p><a href="software.html" class="text-decoration-none" style="color: #999;">Software Development & IT Consulting</a></p>
+                    <p><a href="human-capitai-manahment.html" class="text-decoration-none" style="color: #999;">Human Capital Management</a></p>
+                    <p><a href="legal-services.html" class="text-decoration-none" style="color: #999;">Legal Service</a></p>
                 </div>
                 
             </div>
