--- a/human-capitai-manahment.html
+++ b/human-capitai-manahment.html
@@ -55,7 +55,7 @@
     </nav>
 
 
-    <section class="experience-section">
+    <section class="experience-section overflow-hidden">
         <div class="container">
             <h2 class="experience-title text-center mb-5">Professional Work Experience</h2>
             <div class="row">
