--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 
     <section class="hero-section">
-        <div class="container position-relative">
+        <div class="container-fluid position-relative">
             <video id="hero-video" src="./assets/octopus-WEBSITE.mp4" autoplay muted loop class="w-100"></video>
             <div class="voice-icon" id="voice-toggle">
                 <i class="fa-solid fa-volume-high" id="volume-on-icon" style="display: none;"></i>
